--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
 	"name": "LinkedUp",
-	"version": "1.0",
+	"version": "1.0.1",
 	"action": { "default_popup": "index.html" },
 	"permissions": ["storage", "tabs", "scripting"],
 	"content_scripts": [
@@ -10,5 +10,5 @@
 			"js": ["src/content.js"]
 		}
 	],
-	"host-permissions": ["https://www.linkedin.com/in/*"]
+	"host_permissions": ["http://*/*", "https://*/*"]
 }
