Added all icons and logos

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,15 @@
 {
 	"manifest_version": 3,
 	"name": "LinkedUp",
-	"version": "1.0.1",
+	"version": "1.0",
 	"action": { "default_popup": "index.html" },
 	"permissions": ["storage", "tabs", "scripting"],
+	"icons": {
+		"16": "src/assets/icons/16.png",
+		"32": "src/assets/icons/32.png",
+		"48": "src/assets/icons/48.png",
+		"128": "src/assets/icons/128.png"
+	},
 	"content_scripts": [
 		{
 			"matches": ["https://www.linkedin.com/in/*"],
