Updated the host permissions to be more specific

--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,5 @@
 			"js": ["src/content.js"]
 		}
 	],
-	"host_permissions": ["http://*/*", "https://*/*"]
+	"host_permissions": ["https://www.linkedin.com/*"]
 }
